Bug 49273 - always set the hover state on content when we get a MOUSE_ENTER event.  This prevents problems with some window managers that send MOUSE_LEAVE and MOUSE_ENTER events before ButtonPress events.  r=saari, sr=blizzard.